--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -1,5 +1,5 @@
 {
-	"/": {
+	"metadata": {
 		"title": "GeekOn | Агентство цифровых продуктов",
 		"description": "Поднимите свой проект на новый уровень с нашими универсальными решениями: Потрясающий дизайн UI/UX и веб-сайтов, увлекательный 3D и моушн-дизайн, надежная разработка веб-сайтов, приложений и ботов, эффективное продвижение в социальных сетях (SMM) и таргетинг. Разблокируйте его полный потенциал прямо сейчас!",
 		"og-description": "Поднимите свой проект на новый уровень с нашим универсальными решениями:\n• Потрясающий дизайн UI/UX и веб-сайтов\n• Увлекательный 3D и моушн-дизайн\n• Надежная разработка веб-сайтов, приложений и ботов\n• Эффективное продвижение в социальных сетях (SMM) и таргетинг\n\nРазблокируйте его полный потенциал прямо сейчас!",
@@ -7,6 +7,15 @@
 		"authors": {
 			"Daler": "Далер Фирузов",
 			"Shukhrat": "Шухрат Рустамов"
+		}
+	},
+	"navbar": {
+		"links": {
+			"main": "Главная",
+			"services": "Сервисы",
+			"cases": "Проекты",
+			"team": "Команда",
+			"reviews": "Отзывы"
 		}
 	}
 }
