--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -17,5 +17,86 @@
 			"team": "Команда",
 			"reviews": "Отзывы"
 		}
+	},
+	"homePage": {
+		"mainSection": {
+			"title": "Приложения и веб-сайты на заказ: ваше уникальное решение!",
+			"text": "Превратите ваши мечты в реальность с нашей экспертной командой разработчиков! Уникальное программное обеспечение, веб-приложения и Айти-решения, которые гарантированно помогут вам достичь ваших целей!",
+			"link": "Обсудить проект"
+		},
+		"servicesSection": {
+			"title": "Сервисы",
+			"text": "Мы профессиональная команда разработчиков, дизайнеров и  маркетологов, готовая помочь вашей компании процветать в онлайн-мире. Мы предлагаем инновационные решения чтобы обеспечить ваш успех в Интернете. Наш пакет услуг включает в себя:",
+			"link": "Связаться",
+			"services": {
+				"webDev": {
+					"primary": "Разработка",
+					"secondary": "Веб-сайтов"
+				},
+				"appDev": {
+					"primary": "Разработка",
+					"secondary": "Приложений и ботов"
+				},
+				"graphDes": {
+					"primary": "Графический",
+					"secondary": "Дизайн"
+				},
+				"uiux": {
+					"primary": "UI/UX",
+					"secondary": "Дизайн"
+				},
+				"smm": {
+					"primary": "Social Media",
+					"secondary": "Marketing"
+				},
+				"3d": {
+					"primary": "3D & Motion",
+					"secondary": "Дизайн"
+				}
+			}
+		},
+		"casesSection": {
+			"title": "Проекты",
+			"text": "Предлагаем вам познакомиться с нашим портфолио успешных проектов, отображающих нашу экспертизу в цифровом мире. Мы готовы представить вам конкретные примеры наших документированных успехов, демонстрируя нашу способность достигать впечатляющих результатов.",
+			"button": "Посмотреть все",
+			"tags": {
+				"web": "Веб-сайт",
+				"tgBot": "Телеграм-бот",
+				"3d": "3D Графика",
+				"video": "Видеомонтаж",
+				"smm": "SMM"
+			}
+		},
+		"processSection": {
+			"title": "Рабочий процесс",
+			"text": "Пошаговое руководство по достижению ваших бизнес-целей",
+			"steps": {
+				"1": {
+					"title": "Консультация",
+					"description": "В ходе консультации обсудим все детали проекта: ваши цели, желания, условия и прочее.\nЭто поможет нам разработать стратегию в соответствии с вашими требованиями и добиться максимального результата на каждом этапе."
+				},
+				"2": {
+					"title": "Анализ и разработка стратегии",
+					"description": "Первые дни работы мы потратим на аудит проекта, изучение рынка вашей сферы и анализ конкурентов.\nИсходя из собранных данных мы сможем разработать эффективный план, учитывая все тонкости вашей области деятельности."
+				},
+				"3": {
+					"title": "Реализация",
+					"description": "После разработки стратегии и постановки задач мы приступаем к активной работе.\nМы постоянно будем на связи с вами, чтобы вы смогли контролировать прогресс заказа на каждом шаге."
+				},
+				"4": {
+					"title": "Мониторинг и оптимизация",
+					"description": "По выполнении работы наша команда будет отслеживать бизнес-метрики проекта.\nЭто позволит выявить нам все недочёты и определить какой элемент в системе требует оптимизации."
+				},
+				"5": {
+					"title": "Итоги",
+					"description": "Даже после завершения работы мы продолжим наблюдать за вашим проектом и давать вам советы по его развитию.\nПомните: вы всегда сможете обратиться к нам за помощью или консультацией. Наша команда всегда готова поддержать вас!"
+				}
+			},
+			"banner": {
+				"title": "Давайте приступим к достижению целей.",
+				"text": "Свяжитесь с нами прямо сейчас, чтобы узнать больше о том, как наши услуги могут помочь вашему бизнесу достичь новых высот и добиться успеха в онлайн-среде.",
+				"link": "Обсудить проект"
+			}
+		}
 	}
 }
