--- a/src/assets/locales/ru.json
+++ b/src/assets/locales/ru.json
@@ -97,6 +97,61 @@
 				"text": "Свяжитесь с нами прямо сейчас, чтобы узнать больше о том, как наши услуги могут помочь вашему бизнесу достичь новых высот и добиться успеха в онлайн-среде.",
 				"link": "Обсудить проект"
 			}
+		},
+		"teamSection": {
+			"title": "Команда",
+			"text": "Познакомьтесь с квалифицированной и опытной командой, стоящей за нашими успешными стратегиями цифровой индустрии",
+			"members": {
+				"daler-firuzov": {
+					"name": "Далер Фирузов",
+					"position": "UI/UX & Frontend Dev",
+					"bio": "С 3 летним опытом в области UI/UX дизайна, я приобрел значительную экспертизу в сфере веб-дизайна и дизайна приложений. Я горд основательством GeekOn и рад предлагать наши профессиональные услуги в этой сфере."
+				},
+				"shukhrat-rustamov": {
+					"name": "Шухрат Рустамов",
+					"position": "Full-stack Dev",
+					"bio": "Обладая четырехлетним опытом веб-разработки, я являюсь гордым основателем GeekOn, стремящимся выполнять высококачественную работу, энергично и креативно."
+				},
+				"sabina-izmailova": {
+					"name": "Сабина Измайлова",
+					"position": "SMM Manager",
+					"bio": "Более 3-х лет я занимаюсь маркетингом и стратегиями продвижений в Social Media. Создаю брендированный и аутентичный контент. Все ваши невозможные идеи поможет реализовать команда GeekOn!"
+				},
+				"saveliy-kurov": {
+					"name": "Савелий Куров",
+					"position": "Project Manager",
+					"bio": "Наши знания и подход к делу помогут добиться главной цели нашей команды - вдохнуть новую жизнь в бизнес-индустрию и помочь развивающимся проектам достичь профессиональных высот. Я ручаюсь за это!"
+				},
+				"samat-yakupov": {
+					"name": "Самат Якупов",
+					"position": "Backend Dev",
+					"bio": "Я являюсь архитектором web-приложений и участником проекта GeekOn. Выбирая нас, будьте уверены, мы воплотим Ваши амбициозные идеи в реальность."
+				},
+				"iskander-bajrashev": {
+					"name": "Искандэр Баджрашев",
+					"position": "3D Designer",
+					"bio": "В мире 3D мы не только создаём изображения, мы воплощаем идеи в глубину и объем. Вместе с нами ваше видение приобретает третье измерение, а ваш проект становится живым и неповторимым."
+				}
+			}
+		},
+		"reviewsSection": {
+			"title": "Отзывы",
+			"text": "Почитайте отзывы наших довольных клиентов:"
+		},
+		"contactUsSection": {
+			"title": "Свяжитесь с нами",
+			"text": "Свяжитесь с нами: давайте обсудим ваши потребности в цифровом мире!",
+			"form": {
+				"title": "Приступим к работе прямо сейчас",
+				"note": "Вам ответит <b>Савелий Куров</b>, наш project manager",
+				"fields": {
+					"name": "Ваше имя",
+					"phone": "Ваш номер телефона",
+					"email": "Ваша почта или юзернейм в телеграм"
+				},
+				"submit": "Обсудить проект",
+				"pp": "Нажимая на кнопку, вы соглашаетесь с обработкой персональных данных"
+			}
 		}
 	}
 }
